Apply suggestions from code review
Co-authored-by: Kacper Kapuściak <39658211+kacperkapusciak@users.noreply.github.com>

--- a/docs/docs/animations/withSpring.mdx
+++ b/docs/docs/animations/withSpring.mdx
@@ -69,21 +69,20 @@ import { useSpringPlayground } from '@site/src/components/InteractivePlayground'
 
 <InteractivePlayground usePlayground={useSpringPlayground} />
 
-#### Available config properties:
 
-**Available for physics-based spring**
+Available for physics-based spring:
 
 | Name                 | Type     | Default | Description                                                                                |
 | -------------------- | -------- | ------- | ------------------------------------------------------------------------------------------ |
 | mass <Optional />    | `number` | 1       | The weight of the spring. Reducing this value makes the animation faster.                  |
 | damping <Optional /> | `number` | 10      | How quickly a spring slows down. Higher damping means the spring will come to rest faster. |
 
-**Available for duration-based spring**
+Available for duration-based spring:
 
 | Name                      | Type     | Default | Description                                                                                                                                                     |
 | ------------------------- | -------- | ------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| duration <Optional />     | `number` | 2000    | Length of the animation (in milliseconds). <br/> Available in reanimated ≥ 3.2.x                                                                                |
-| dampingRatio <Optional /> | `number` | 0.5     | How damped the spring is. Value `1` means the spring is critically damped, and value `>1` means the spring is overdamped. <br/> Available in reanimated ≥ 3.2.x |
+| duration <Optional />     | `number` | 2000    | Length of the animation (in milliseconds). <br/> Available in Reanimated ≥ 3.2.x                                                                                |
+| dampingRatio <Optional /> | `number` | 0.5     | How damped the spring is. Value `1` means the spring is critically damped, and value `>1` means the spring is overdamped. <br/> Available in Reanimated ≥ 3.2.x |
 
 :::info
 The `mass` and `damping` (physics-based) properties can't be used at the same time as `duration` and `dampingRatio` (duration-based).
@@ -91,7 +90,7 @@ The `mass` and `damping` (physics-based) properties can't be used at the same ti
 When used together `duration` and `dampingRatio` overrides `mass` and `damping` props.
 :::
 
-**Available for every spring animation**
+Available for every spring animation:
 
 | Name                                   | Type               | Default               | Description                                                                                                                                                                          |
 | -------------------------------------- | ------------------ | --------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
@@ -100,8 +99,8 @@ When used together `duration` and `dampingRatio` overrides `mass` and `damping` 
 | overshootClamping <Optional />         | `boolean`          | false                 | Whether a spring can bounce over the `toValue`.                                                                                                                                      |
 | restDisplacementThreshold <Optional /> | `number`           | 0.01                  | The displacement below which the spring will snap to `toValue` without further oscillations.                                                                                         |
 | restSpeedThreshold <Optional />        | `number`           | 2                     | The speed in pixels per second from which the spring will snap to `toValue` without further oscillations.                                                                            |
-| reduceMotion <Optional />              | `ReduceMotion`     | `ReduceMotion.System` | A parameter that determines how the animation responds to the device's reduced motion accessibility setting. <br/> Available in reanimated ≥ 3.5                                     |
-| clamp <Optional />                     | `[number, number]` | `undefined`           | Limit of the scope of movement. If your spring would exceed this limit, then "dampingRatio" will be reduced (to make the spring less "bouncy") <br/> Available in reanimated ≥ 3.6.x |
+| reduceMotion <Optional />              | `ReduceMotion`     | `ReduceMotion.System` | A parameter that determines how the animation responds to the device's reduced motion accessibility setting. <br/> Available in Reanimated ≥ 3.5.x                                   |
+| clamp <Optional />                     | `[number, number]` | `undefined`           | Limit of the scope of movement. If your spring would exceed this limit, then `dampingRatio` will be reduced (to make the spring less bouncy) <br/> Available in Reanimated ≥ 3.6.x |
 
 #### `callback` <Optional />
 
