--- a/docs/docs/animations/withDecay.mdx
+++ b/docs/docs/animations/withDecay.mdx
@@ -80,7 +80,7 @@ A function called on animation complete. In case the animation is cancelled, the
 
 ### Returns
 
-`withDecay` returns an [animation object](/docs/fundamentals/glossary#animation-object). It can be either assigned directly to a [shared value](/docs/fundamentals/glossary#shared-value) or can be used as a value for a style object returned from [useAnimatedStyle](/docs/core/useAnimatedStyle).
+`withDecay` returns an [animation object](/docs/fundamentals/glossary#animation-object) which holds the current state of the animation. It can be either assigned directly to a [shared value](/docs/fundamentals/glossary#shared-value) or can be used as a value for a style object returned from [useAnimatedStyle](/docs/core/useAnimatedStyle).
 
 ## Example
 
