Update withRepeat docs

--- a/docs/docs/animations/withRepeat.mdx
+++ b/docs/docs/animations/withRepeat.mdx
@@ -49,7 +49,7 @@ enum ReduceMotion {
 
 #### `animation`
 
-The animation you want to repeat.
+An [animation object](/docs/fundamentals/glossary#animation-object) you want to repeat.
 
 #### `numberOfReps` <Optional />
 
